# netbox-more-metrics

./: .pre-commit-config.yaml  .yamllint  404.html  CHANGELOG.md  Makefile  README.md  compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml
changelog/: index.html
development/: Dockerfile  dev.env
development/configuration/: logging.py  plugins.py
netbox_more_metrics/: __init__.py  choices.py  collectors.py  fields.py  forms.py  metrics.py  models.py  navigation.py  querysets.py  tables.py  urls.py  utilities.py  validators.py  views.py
netbox_more_metrics/api/: serializers.py  urls.py  views.py
netbox_more_metrics/migrations/: 0001_initial.py  0002_metric_metric_value.py
netbox_more_metrics/templates/netbox_more_metrics/: metric.html  metriccollection.html
search/: search_index.json
