[tool.poetry]
name = "netbox-more-metrics"
version = "0.1.1"
description = "Provide customized metrics on data stored in NetBox."
authors = ["Daan van Gorkum <me+netbox@dj.vg>"]
readme = "README.md"
packages = [{include = "netbox_more_metrics"}]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = ">=0.12.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.3"
black = "^23.1.0"
identify = "^2.5.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
